# MemCleaner

./: Cargo.toml  README.md
src/: index.html  main.js  main.rs  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
